gcc/testsuite/rust/rustc/ui/const-generics/generic_const_exprs/closures.rs
#![feature(generic_const_exprs)]
#![allow(incomplete_features)]
fn test<const N: usize>() -> [u8; N + (|| 42)()] {}
// { dg-error ".E0391." "" { target *-*-* } .-1 }

fn main() {}

